# security-application

./: .gitignore  README.md
database/: .gitignore  README.md  mqtt_sub.py
pico/: CMakeLists.txt  README.MD
pico/include/: alarmcount.h  hcsr04.h  jsonify.h  mqtt_config.h  wifi.h
pico/src/: CMakeLists.txt  alarm.c  alarmcount.c  buzzer_melodies.c  hcsr04.c  jsonify.c  main.c  mqtt_functions.c  wifi.c
webapp/: password_checker.py  webserver.rb
webapp/public/: script.js  style.css
webapp/views/: create_account.erb  login.erb  main_page.erb
webapp/views/sub_pages/: alarm_system.erb  cameras.erb  my_devices.erb  neighboorhood_watch.erb  notifications.erb  settings.erb  smart_home.erb  support.erb  users.erb  voice_control.erb
